<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:background="@drawable/background"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/calculator"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_neutral20"
        android:textAlignment="center"
        android:fontFamily="@font/rellion"

        android:background="@drawable/view"
        android:padding="10dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:id="@+id/numFirst"
            android:inputType="number"
            android:hint="@string/num_1"

            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"

            android:background="@drawable/view"
            android:padding="15dp"
            android:layout_marginBottom="5dp"

            tools:ignore="Autofill">
        </EditText>

        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"

            android:id="@+id/numSecond"
            android:inputType="number"
            android:hint="@string/num_2"

            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"

            android:background="@drawable/view"
            android:padding="15dp"
            android:layout_marginTop="5dp"

            tools:ignore="Autofill">
        </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"

            android:id="@+id/btnAdd"
            android:text="@string/add"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="#fff"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"

            android:id="@+id/btnSub"
            android:text="@string/sub"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="#fff"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"

            android:id="@+id/btnMulti"
            android:text="@string/multi"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="#fff"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            tools:ignore="ButtonStyle">
        </Button>

        <Button
            android:layout_width="70dp"
            android:layout_height="80dp"

            android:id="@+id/btnDiv"
            android:text="@string/div"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="#fff"

            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"

            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:id="@+id/txtOutput"
            android:text="@string/display_output"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/material_dynamic_neutral20"
            android:textAlignment="center"
            android:fontFamily="@font/rellion"

            android:background="@drawable/view"
            android:padding="15dp">
        </TextView>

        <Button
            android:layout_width="65dp"
            android:layout_height="72dp"

            android:id="@+id/btnClear"
            android:text="@string/clear"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:backgroundTint="#fff"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"

            tools:ignore="ButtonStyle">
        </Button>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"

            android:text="@string/dev_ver"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:fontFamily="@font/rellion"

            android:padding="5dp">
        </TextView>
    </LinearLayout>

</LinearLayout>